# S.A.G.E

./: .gitignore  CMakeLists.txt  README.md  app.json  bootsplash.js  bootsplash.tsx  metro.config.js  package-lock.json  package.json  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  tamagui.config.ts  theme.ts
.github/workflows/: deploy.yml
.tamagui/: tamagui-components.config.cjs  tamagui.config.json
android/: settings.gradle
api/: api.ts
app/: _layout.tsx
app/(log)/: [id].tsx
app/(tabs)/: _layout.tsx  index.tsx  new-log.tsx  settings.tsx
app/log/: [id].tsx
components/: BackButton.tsx
components/ui/: TabBarBackground.ios.tsx
components/web_server/: CMakeLists.txt  sensor_processing.c  sensor_processing.h  web_server.c  web_server.h
components/web_server/dht/: CMakeLists.txt
context/: SelectionModeProvider.tsx
data/: example_sensor_data.csv
database/: db.ts
landing-page/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
landing-page/src/pages/: about.astro  (+3 more)
main/: CMakeLists.txt  command_types.h  main.c
patches/: react-native-node+3.3.1.patch
prisma/: dev.db  schema.prisma
sage-client-app/: .gitignore  app.json  package.json  tamagui.config.ts  theme.ts
sage-client-app/.tamagui/: tamagui.config.cjs
sage-client-app/app/: +not-found.tsx  _layout.tsx
sage-client-app/components/: ChartCard.tsx
sage-client-app/context/: ThemeProvider.tsx
sage-client-app/database/: db.ts  script.ts
utils/: esp_http_request.tsx
web/: index.html  log.html  logs-list.html  logs.html  logs_list.js  main.js  style.css
(+30 files in other folders)
